k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alta-go
  namespace: alta-go
  labels:
    app.kubernetes.io/name: alta-go
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: alta-go
  ports:
    - name: http
      port: 80
      targetPort: http
