k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alta-go
  namespace: alta-go
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: alta-go.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alta-go
                port:
                  name: http
